[package]
name = "AlgorithmWasmUtility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path="lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.0"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }


[profile.release]
lto = true
opt-level='z'